--- a/index.html
+++ b/index.html
@@ -3,83 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Login Page</title>
+    <title>Create Account</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="main">
-        <div class="header">
-            <p>BoardMe</p>
+    <div class="signup-container">
+        <div class="left-panel">
+            <ul>
+                <li>
+                    <span class="check-icon">~</span>
+                    <div class="feature">
+                        <h3>sign-up instructions</h3>
+                        <p>Enter your email address and phone number to create an account.</p>
+                    </div>
+                </li>
+                <li>
+                    <span class="check-icon">~</span>
+                    <div class="feature">
+                        <h3>Phone Number</h3>
+                        <p>you can also call us on the line 09034594003.</p>
+                    </div>
+                </li>
+                <li>
+                    <span class="check-icon">~</span>
+                    <div class="feature">
+                        <h3>Start sending emails</h3>
+                        <p>You can also send an email to us judejeremiah@12345.</p>
+                    </div>
+                </li>
+            </ul>
         </div>
-
-        <div class="body">
-            <div class="login-div">
-                <h2>Log in to your Account</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur</p>
-                <form action="">
-                    <div class="form-control">
-                        <label for="">Email</label>
-                        <input type="text" placeholder="Enter Your Name">
-                    </div>
-                    <div class="form-control">
-                        <label for="">password</label>
-                        <input type="password" name="" id="">
-                    </div>
-                    <div class="check">
-                        <input type="checkbox" name="" id="">&nbsp; 
-                        <p>Forget password</p>
-                    </div>
-                    <input type="submit" value="LOG IN">
-                    <p>or log in using</p>
-                </form>
-                    <div class="icons">
-                        <button>
-                            <img src="" alt="">
-                        </button>
-                        <button>
-                            <img src="" alt="">
-                        </button>
-                        <button>
-                            <img src="aiaiaiai_prev_ui (1).png" alt="" width="70">
-                        </button>
-                    </div>
-
-                
-            </div>
-            <div class="switch-signup">
-                <h2>Don't have an account</h2>
-                <p>Let's go and set up</p>
-                <button>SIGN UP</button>
-            </div>
-            <div class="switch-login">
-                <h2>Already Signed up?</h2>
-                <p>Log in to your account so you can continue building</p>
-                <button>LOG IN</button>
-            </div>
-            <div class="signup-div">
-                <h2>Sign up for an account</h2>
-                <p>lets get you all set up so you can start creating your first onbox</p>
-                <form action="form-control">
-                <div class="form-control">
-                    <label for="">First Name</label>
-                    <input type="text" placeholder="Your First Name">
+        <div class="right-panel">
+            <h2>Create your account</h2>
+            <form class="signup-form">
+                <div class="input-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" placeholder="Enter your email address">
                 </div>
-                <div class="form-control">
-                    <label for="">Second Name</label>
-                    <input type="text" placeholder="Your Second Name">
+                <div class="input-group">
+                    <label for="fullname">Full Name</label>
+                    <input type="text" id="fullname" placeholder="Enter your full name">
                 </div>
-                <div class="form-control">
-                    <label for="">Email</label>
-                    <input type="text" placeholder="Enter Your Email">
+                <div class="input-group">
+                    <label for="password">Password</label>
+                    <input type="password" id="password" placeholder="Type to create a password">
                 </div>
-                <div class="form-control">
-                    <label for="">password</label>
-                    <input type="text" placeholder="Enter Your password">
+                <div class="input-group">
+                    <label>
+                        <input type="checkbox" id="updates">
+                        Get updates and notifications about our product.
+                    </label>
                 </div>
-                </form>
-            </div>
+                <button type="submit" class="submit-btn">Sign Up</button>
+            </form>
         </div>
     </div>
-    
 </body>
 </html>
