--- a/second.html
+++ b/second.html
@@ -14,13 +14,13 @@
         <div class="CallLogo">Contact Us Now</div>
         <nav id="nav-menu">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Enquiry</a></li>
+                <li><a href="index.html">Sign up</a></li>
+                <li><a href="enquiry.html">Enquiry</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Services</a></li>
             </ul>
         </nav>
-        <button class="Paybutton">Pay for our Premium</button>
+        <button class="Paybutton"><a href="indx.html">Pay for our Premium</a></button>
     </header>
 
     <section class="banner">
@@ -65,7 +65,7 @@
 
     <footer>
         <p>
-          &copy; 2023 Your Company. All rights reserved.
+          &copy; 2023 JEREMIAH CO . All rights reserved.
           </p>
     </footer>
 </body>
